--- a/Bio/index.html
+++ b/Bio/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>MeetMe - Resume Website Template</title>
+    <title>Veer Teja Yemula - Profile</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -177,7 +177,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="#">Quality Analyst</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>-->
               </div>
             </div>
           </div>
@@ -185,11 +185,11 @@
           <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
-                <i class="icon-layers"></i>
+                <i class="icon-camera"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Photography</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>-->
               </div>
             </div>
           </div>
@@ -197,11 +197,11 @@
           <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.9s">
               <div class="icon">
-                <i class="icon-briefcase"></i>
+                <i class="icon-link"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Code</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>-->
               </div>
             </div>
           </div>
@@ -209,11 +209,11 @@
           <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
-                <i class="icon-bubbles"></i>
+                <i class="icon-earphones"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Gadzets</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>-->
               </div>
             </div>
           </div>
