Updated href of contact email

--- a/Bio/index.html
+++ b/Bio/index.html
@@ -527,7 +527,7 @@
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:hello@tom.com">veeryemula@gmail.com</a></p>
+                    <p><a href="mailto:veeryemula@gmail.com">veeryemula@gmail.com</a></p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
