Updated Gadgets spelling

--- a/Bio/index.html
+++ b/Bio/index.html
@@ -212,7 +212,7 @@
                 <i class="icon-earphones"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Gadzets</a></h3>
+                <h3><a href="#">Gadgets</a></h3>
 <!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>-->
               </div>
             </div>
