--- a/Bio/index.html
+++ b/Bio/index.html
@@ -111,16 +111,16 @@
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Quality Analyst  |  Code  |  Photography  |  Gadgets</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
-                    <a class="facebook" href="https://www.facebook.com/veerteja.yemula/"><i class="icon-social-facebook"></i></a>
+                    <a target="_blank" class="facebook" href="https://www.facebook.com/veerteja.yemula/"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
-                    <a class="twitter" href="https://twitter.com/veeryemula"><i class="icon-social-twitter"></i></a>
+                    <a target="_blank" class="twitter" href="https://twitter.com/veeryemula"><i class="icon-social-twitter"></i></a>
                   </li>
                   <li>
-                    <a class="instagram" href="https://www.instagram.com/veer_tej_/"><i class="icon-social-instagram"></i></a>
+                    <a target="_blank" class="instagram" href="https://www.instagram.com/veer_tej_/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/veer-teja-yemula-ab59ab88/"><i class="icon-social-linkedin"></i></a>
+                    <a target="_blank" class="linkedin" href="https://www.linkedin.com/in/veer-teja-yemula-ab59ab88/"><i class="icon-social-linkedin"></i></a>
                   </li>
                 </ul>
               </div>
@@ -555,16 +555,16 @@
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                 <li>
-                  <a class="facebook" href="https://www.facebook.com/veerteja.yemula/"><i class="icon-social-facebook"></i></a>
+                  <a target="_blank" class="facebook" href="https://www.facebook.com/veerteja.yemula/"><i class="icon-social-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="https://twitter.com/veeryemula"><i class="icon-social-twitter"></i></a>
+                  <a target="_blank" class="twitter" href="https://twitter.com/veeryemula"><i class="icon-social-twitter"></i></a>
                 </li>
                 <li>
-                  <a class="instagram" href="https://www.instagram.com/veer_tej_/"><i class="icon-social-instagram"></i></a>
+                  <a target="_blank" class="instagram" href="https://www.instagram.com/veer_tej_/"><i class="icon-social-instagram"></i></a>
                 </li>
                 <li>
-                  <a class="linkedin" href="https://www.linkedin.com/in/veer-teja-yemula-ab59ab88/"><i class="icon-social-linkedin"></i></a>
+                  <a target="_blank" class="linkedin" href="https://www.linkedin.com/in/veer-teja-yemula-ab59ab88/"><i class="icon-social-linkedin"></i></a>
                 </li>
               </ul>
               <p>Copyright © 2020 Veer Profile All Right Reserved</p>
